--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "barryvdh/laravel-ide-helper": "v2.1.0"
+        "barryvdh/laravel-ide-helper": "v2.1.0",
+        "rap2hpoutre/laravel-log-viewer": "^0.4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
