add: нормальная почта для рассылки

--- a/.env
+++ b/.env
@@ -12,10 +12,10 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=smtp.yandex.ru
 MAIL_PORT=465
-MAIL_USERNAME=alterbooks.info@gmail.com
-MAIL_PASSWORD=innYAPX$pm#Q9{I
+MAIL_USERNAME=info@alterbooks.ru
+MAIL_PASSWORD=6CA4jLsGKp9yc
 MAIL_ENCRYPTION=ssl
-MAIL_FROM=alterbooks.info@gmail.com
+MAIL_FROM=info@alterbooks.ru
 MAIL_NAME=AlterBooks
