GLOBAL UPDATE: Обновление версии фреймворка. Начало почти всего с чистого листа.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=ns3WWxEPNI055OiVVoY6rpOJyyuE9ycc
+APP_KEY=53wXCDNpVCWqHC06Js8VRZ6xpKsefKGj
 
 DB_HOST=localhost
 DB_DATABASE=alterbooks_base
@@ -10,6 +10,10 @@ DB_PASSWORD=GW5qnVqhWAueHEHg
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
+
+REDIS_HOST=localhost
+REDIS_PASSWORD=null
+REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=mail.nic.ru
