add: регистрация и авторизация через почту unstable: регистрация через fb, tw, google UNSTABLE: vk - не работает

--- a/.env
+++ b/.env
@@ -23,3 +23,19 @@ MAIL_PASSWORD=6CA4jLsGKp9yc
 MAIL_ENCRYPTION=ssl
 MAIL_FROM=info@alterbooks.ru
 MAIL_NAME=AlterBooks
+
+FACEBOOK_CLIENT_ID=164790113902687
+FACEBOOK_CLIENT_SECRET=8a62df9e7c45668d5f761950a035c9b5
+FACEBOOK_REDIRECT=http://localhost/social/oauth/redirect/facebook
+
+GOOGLE_CLIENT_ID=937449778001-cdcn3pfp0p221bp7qv5e4o98kliqpj94.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=SLZ_v8EReyB3fh7ZjRUbiuMV
+GOOGLE_REDIRECT=http://localhost/social/oauth/redirect/google
+
+TWITTER_CLIENT_ID=qfK6P9ATdhCzPtrVcGXERbr11
+TWITTER_CLIENT_SECRET=CsHaczFVHenGOen78Oc5bve5KrfYYNJEYff131KYwhanPRAfbO
+TWITTER_REDIRECT=http://localhost/social/oauth/redirect/twitter
+
+VKONTAKTE_CLIENT_ID=5311734
+VKONTAKTE_CLIENT_SECRET=cvmy4pckXZyUkAuCBpdx
+VKONTAKTE_REDIRECT=http://localhost/social/oauth/redirect/vkontakte
