update: переписал логику авторизации через соц. сети

--- a/.env
+++ b/.env
@@ -38,4 +38,4 @@ TWITTER_REDIRECT=http://localhost/social/oauth/redirect/twitter
 
 VKONTAKTE_CLIENT_ID=5311734
 VKONTAKTE_CLIENT_SECRET=cvmy4pckXZyUkAuCBpdx
-VKONTAKTE_REDIRECT=http://localhost/social/oauth/redirect/vkontakte
+VKONTAKTE_REDIRECT=http://develop.alterbooks.ru/social/oauth/redirect/vkontakte
