add: подтверждение email

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=53wXCDNpVCWqHC06Js8VRZ6xpKsefKGj
+APP_KEY=base64:MWNt4jKSeaeoFCZaGgZGzX/7EmkYDT0YsetKkizvbdo=
 
 DB_HOST=localhost
 DB_DATABASE=alterbooks_base
@@ -16,7 +16,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mail.nic.ru
+MAIL_HOST=smtp.yandex.ru
 MAIL_PORT=465
 MAIL_USERNAME=info@alterbooks.ru
 MAIL_PASSWORD=6CA4jLsGKp9yc
