глобальное обновление. Проект снова переписан

--- a/.env
+++ b/.env
@@ -1,17 +1,21 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=base64:MWNt4jKSeaeoFCZaGgZGzX/7EmkYDT0YsetKkizvbdo=
+APP_KEY=base64:Zp/IqKTHAPzlNlExCpLbAbKdtqtkjxTx7Q2CyQsgOOE=
+APP_URL=http://localhost
 
-DB_HOST=localhost
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=5432
 DB_DATABASE=alterbooks_base
 DB_USERNAME=alterbooks
 DB_PASSWORD=GW5qnVqhWAueHEHg
+DB_SCHEMA=develop
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=localhost
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -38,4 +42,4 @@ TWITTER_REDIRECT=http://localhost/social/oauth/redirect/twitter
 
 VKONTAKTE_CLIENT_ID=5311734
 VKONTAKTE_CLIENT_SECRET=cvmy4pckXZyUkAuCBpdx
-VKONTAKTE_REDIRECT=http://develop.alterbooks.ru/social/oauth/redirect/vkontakte
+VKONTAKTE_REDIRECT=http://localhost/social/oauth/redirect/vkontakte
