--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,17 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
+        "barryvdh/laravel-ide-helper": "v2.1.4",
         "laravel/socialite": "^2.0",
-        "socialiteproviders/vkontakte": "^1.1"
+        "socialiteproviders/vkontakte": "^2.0",
+        "doctrine/dbal": "2.3.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
-        "barryvdh/laravel-ide-helper": "^2.1",
-        "doctrine/dbal": "~2.3"
+        "symfony/dom-crawler": "2.8.*|3.0.*"
     },
     "autoload": {
         "classmap": [
@@ -40,13 +40,11 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
         ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ]
     },
