--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "name": "Alterbooks",
+  "name": "AlterBooks",
   "short_name": "AB",
+  "start_url": ".",
   "icons": [{
     "src": "img/icon-16.png",
     "sizes": "16x16",
@@ -18,7 +19,6 @@
     "sizes": "192x192",
     "type": "image/png"
   }],
-  "start_url": "/index.html?homescreen=1",
   "display": "standalone",
   "background_color": "#FFFFFF"
 }
