Обновить команду для запуска в production окружении

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_script:
   - composer install
   - psql -c 'create database alterbooks;' -U postgres
   - cp .env.travis .env
-  - php artisan migrate
+  - php artisan migrate --force
 
 script: phpunit
