Обновить генерацию ключа для production окружения

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - composer install
   - psql -c 'create database alterbooks;' -U postgres
   - cp .env.travis .env
+  - php artisan key:generate --force
   - php artisan migrate --force
 
 script: phpunit
