Добавлена 404-ая страница

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/css/style.css": "/css/style.css?id=7390e3057cb8f9cd8f49",
     "/css/app.css.map": "/css/app.css.map?id=da2fbbffbfa1b11f2e18",
     "/css/style.css.map": "/css/style.css.map?id=0f01c340a6b7730e61be",
-    "/css/fix.css": "/css/fix.css?id=dfb763d46a39c8d766a8"
+    "/css/fix.css": "/css/fix.css?id=dfb763d46a39c8d766a8",
+    "/css/404.css": "/css/404.css?id=07f7fc056429a5895542"
 }
