--- a/.env.example
+++ b/.env.example
@@ -28,13 +28,16 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+MAIL_FROM_ADDRESS=info@alterbooks.ru
+MAIL_FROM_NAME=AlterBooks
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-MONGO_URI=
-MONGO_URI_OPTIONS=
-MONGO_DRIVER_OPTIONS=
+MONGODB_URI=
+MONGODB_URI_OPTIONS=
+MONGODB_DRIVER_OPTIONS=
 
 AWS_KEY=
 AWS_SECRET=
