--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
+        "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "mongodb/mongodb": "^1.1"
+        "mongodb/mongodb": "^1.1",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
