--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "~1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "mongodb/mongodb": "^1.1",
-        "predis/predis": "~1.0"
+        "predis/predis": "~1.0",
+        "rap2hpoutre/laravel-log-viewer": "^0.13.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
