--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "mongodb/mongodb": "^1.1",
         "predis/predis": "~1.0",
+        "pusher/pusher-php-server": "~3.0",
         "rap2hpoutre/laravel-log-viewer": "^0.13.0"
     },
     "require-dev": {
