--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "less-loader": "^4.0.5",
         "lodash": "^4.17.5",
         "vue": "^2.5.13"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.3.5",
+        "pusher-js": "^4.2.2"
     }
 }
