--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,11 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.env.backup
 .env.test
 .env.dusk.local
 phpunit
+phpunit.dusk.xml
 
 #Hide all public css and js
 /public/css/*
