Заполнение приближеными к реальности, фейковыми данными

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,19 @@ MONGODB_URI=
 MONGODB_URI_OPTIONS=
 MONGODB_DRIVER_OPTIONS=
 
+FILESYSTEM_DRIVER=
+
 AWS_KEY=
 AWS_SECRET=
 AWS_REGION=
 AWS_BUCKET=
+
+SEEDER_USER_EMAIL=
+SEEDER_USER_PASSWORD=
+SEEDER_USER_NAME=
+SEEDER_USER_SURNAME=
+SEEDER_USER_PATRONYMIC=
+SEEDER_USER_NICKNAME=
+SEEDER_USER_GENDER=
+SEEDER_USER_BIRTHDAY_DATE=
+SEEDER_USER_AVATAR_NAME=
