--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.1.0",
         "cviebrock/eloquent-sluggable": "^4.3",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
@@ -19,6 +19,7 @@
         "rap2hpoutre/laravel-log-viewer": "^0.13.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
         "barryvdh/laravel-debugbar": "^3.1",
         "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "~2.0",
