--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cviebrock/eloquent-sluggable": "^4.3",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
