--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.4.0",
+        "moment": "^2.22.2",
         "pusher-js": "^4.2.2"
     }
 }
