Возможность использовать docker

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=AlterBooks
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://alterbooks
+ADMIN_APP_URL=http://admin.alterbooks
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=postgres
 DB_PORT=5432
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=default
+DB_USERNAME=default
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
@@ -17,7 +18,7 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=redis
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -39,7 +40,7 @@ MONGODB_URI=
 MONGODB_URI_OPTIONS=
 MONGODB_DRIVER_OPTIONS=
 
-FILESYSTEM_DRIVER=
+FILESYSTEM_DRIVER=public
 
 AWS_KEY=
 AWS_SECRET=
@@ -53,5 +54,6 @@ SEEDER_USER_SURNAME=
 SEEDER_USER_PATRONYMIC=
 SEEDER_USER_NICKNAME=
 SEEDER_USER_GENDER=
+#YYYY-DD-MM
 SEEDER_USER_BIRTHDAY_DATE=
 SEEDER_USER_AVATAR_NAME=
