--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /node_modules
 /public/hot
-/public/storage
 /storage/*.key
 /vendor
 /.idea
@@ -9,10 +8,10 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
-.env.backup
-.env.test
-.env.dusk.local
+/.env
+/.env.backup
+/.env.test
+/.env.dusk.local
 phpunit
 phpunit.dusk.xml
 
