--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,8 @@ SEEDER_USER_NAME=
 SEEDER_USER_SURNAME=
 SEEDER_USER_PATRONYMIC=
 SEEDER_USER_NICKNAME=
+#m/f/n
 SEEDER_USER_GENDER=
-#YYYY-DD-MM
+#YYYY-MM-DD
 SEEDER_USER_BIRTHDAY_DATE=
 SEEDER_USER_AVATAR_NAME=
