Мелкие правки значений окружения

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DB_PORT=5432
 DB_DATABASE=default
 DB_USERNAME=default
 DB_PASSWORD=secret
+DB_SCHEMA=public
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
