--- a/.env.test.example
+++ b/.env.test.example
@@ -1,9 +1,8 @@
 APP_KEY=
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=postgres
 DB_PORT=5432
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
-DB_SCHEMA=test
+DB_DATABASE=test
+DB_USERNAME=default
+DB_PASSWORD=secret
