--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,15 @@
         "rap2hpoutre/laravel-log-viewer": "^0.13.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
         "barryvdh/laravel-debugbar": "^3.1",
         "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "krlove/eloquent-model-generator": "^1.3",
         "laravel/dusk": "^2.0",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "classmap": [
